--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>temp-1</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="css/slick.css">
+    <link href="https://rawgit.com/kenwheeler/slick/master/slick/slick.css">
+    <link href="https://rawgit.com/kenwheeler/slick/master/slick/slick-theme.css">
     <style>
     html, body, header{
       height: 100%; width: 100%;
@@ -46,17 +47,14 @@
     </nav>
 
     <header>
-      <div class="slider">
-        <div>
-          <img src="img/cayetano-gil-502991-unsplash.jpg" class="img-fluid"/>
-        </div>
-        <div>
-          <img src="img/cayetano-gil-502991-unsplash.jpg" class="img-fluid"/>
-        </div>
-        <div>
-          <img src="img/cayetano-gil-502991-unsplash.jpg" class="img-fluid"/>
-        </div>
-      </div>
+      <section class="slider">
+    <div>slide1</div>
+    <div>slide2</div>
+    <div>slide3</div>
+    <div>slide4</div>
+    <div>slide5</div>
+    <div>slide6</div>
+</section>
     </header>
 
     <section>
@@ -78,17 +76,43 @@
     </footer>
 
   </body>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
-  <script src="js/slick.min.js"></script>
+  <script src="https://rawgit.com/kenwheeler/slick/master/slick/slick.js"></script>
 
   <script>
   $(function(){
-    $('.slider').slick();
+    /**
+
+      This fiddle is using the latest version
+      of Slick (from master) and jQuery.
+
+      If your issue occurs in older version or a
+      specific tag; please use the "External Resources"
+      section in the sidebar to correct it.
+
+  **/
+
+
+  $(".slider").slick({
+      autoplay: true,
+      dots: true,
+      responsive: [{
+          breakpoint: 500,
+          settings: {
+              dots: false,
+              arrows: false,
+              infinite: false,
+              slidesToShow: 2,
+              slidesToScroll: 2
+          }
+      }]
+  });
   });
 
   </script>
