--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 	<title>ARCHWAYENT | Home</title>
+	<meta name="referrer" content="origin">
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Holden Grant Causing">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
@@ -9,7 +15,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">  
 </head>
 <body>
 	<nav class="navbar pt-4 transpaarent navbar-expand-lg fixed-top">
@@ -49,9 +56,9 @@
 			  	</div>
 			    <div class="content-holder">
 			    	<div class="content-here">
-			    		<h1>Insert Header Title</h1>
-			    		<span><p>slide short desc Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></span>
-			    		<button class="btn btn-light-brown">Read More</button>
+			    		<h1 class="opacity-0">Insert Header Title</h1>
+			    		<span class="opacity-0"><p>slide short desc Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></span>
+			    		<button class="btn btn-light-brown opacity-0">Read More</button>
 			    	</div>
 			    </div>
 			  </div>
@@ -61,9 +68,9 @@
 			  	</div>
 			    <div class="content-holder">
 			    	<div class="content-here">
-			    		<h1>Insert Header Title</h1>
-			    		<span><p>slide short desc Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></span>
-			    		<button class="btn btn-light-brown">Read More</button>
+			    		<h1 class="opacity-0">Insert Header Title</h1>
+			    		<span class="opacity-0"><p>slide short desc Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></span>
+			    		<button class="btn btn-light-brown opacity-0">Read More</button>
 			    	</div>
 			    	
 			    </div>
@@ -74,15 +81,15 @@
     <section id="service-section">
     	<div class="container">
     		<div class="row text-center">
-    			<div class="col-lg-3 col-md-3 col-sm-12">
-    				<a href="#">
+    			<div class="col-lg-3 col-md-3 col-sm-12 opacity-0 left-slide">
+    				<a href="#" class="">
     					<i class="fa fa-pencil pb-3" aria-hidden="true"></i>
 	    				<h3>Service 1</h3>
 	    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 	    				<hr class="col-lg-3 mt-4">
     				</a>
     			</div>
-    			<div class="col-lg-3 col-md-3 col-sm-12">
+    			<div class="col-lg-3 col-md-3 col-sm-12 opacity-0 left-slide">
     				<a href="#">
     					<i class="fa fa-file pb-3" aria-hidden="true"></i>
 	    				<h3>Service 2</h3>
@@ -90,7 +97,7 @@
 	    				<hr class="col-lg-3 mt-4">
     				</a>
     			</div>
-    			<div class="col-lg-3 col-md-3 col-sm-12">
+    			<div class="col-lg-3 col-md-3 col-sm-12 opacity-0 right-slide">
     				<a href="#">
     					<i class="fa fa-cog pb-3" aria-hidden="true"></i>
 	    				<h3>Service 3</h3>
@@ -98,7 +105,7 @@
 	    				<hr class="col-lg-3 mt-4">
     				</a>
     			</div>
-    			<div class="col-lg-3 col-md-3 col-sm-12">
+    			<div class="col-lg-3 col-md-3 col-sm-12 opacity-0 right-slide">
     				<a href="#">
     					<i class="fa fa-briefcase pb-3" aria-hidden="true"></i>
 	    				<h3>Service 4</h3>
@@ -113,10 +120,10 @@
     <section id="about-section" class="no-padding">
     	<div class="container-fluid">
     		<div class="row">
-    			<div class="col-lg-6 col-md-6 col-sm-12 office-pic" style="background-image: url(img/nastuh-abootalebi-284884-unsplash.jpg);">
+    			<div class="col-lg-6 col-md-6 col-sm-12 office-pic opacity-0 left-slide" style="background-image: url(img/nastuh-abootalebi-284884-unsplash.jpg);">
     				<!-- <img src="img/nastuh-abootalebi-284884-unsplash.jpg"> -->
     			</div>
-    			<div class="col-lg-6 col-md-6 col-sm-12 about-short-read">
+    			<div class="col-lg-6 col-md-6 col-sm-12 about-short-read opacity-0 right-slide">
     				<div class="col-lg-9 col-md-12 col-sm-12 pb-sm-4">
     					<h2 class="mt-5">About Us</h2>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
@@ -241,11 +248,50 @@
     <section id="serv-section">
     	<div class="container">
     		<div class="row">
-    			<div class="col-lg-2 offset-lg-1 col-sm-12">CLIETNS</div>
-    			<div class="col-lg-2 col-sm-12">COFFEE</div>
-    			<div class="col-lg-2 col-sm-12">POSTs</div>
-    			<div class="col-lg-2 col-sm-12">LIKES</div>
-    			<div class="col-lg-2 col-sm-12">LAUNCH</div>
+    			<div class="col-lg-2 offset-lg-1 col-sm-12">
+    				<div class="counter-icon text-center">
+    					<img src="img/user_icon.png">
+    				</div>
+    				<p class="countUpMe" data-endVal="3587">0</p>
+    				<p class="icon-name text-center">Satisfied Clients
+    				<hr class="col-lg-2 col-md-1 col-sm-2 mt-4">
+    			</div>
+
+    			<div class="col-lg-2 col-sm-12">
+    				<div class="counter-icon text-center">
+    					<img src="img/coff_icon.png">
+    				</div>
+    				<p class="countUpMe" data-endVal="207">0</p>
+    				<p class="icon-name text-center">Cups of coffee</p>
+    				<hr class="col-lg-2 col-md-1 col-sm-2 mt-4">
+    			</div>
+
+    			<div class="col-lg-2 col-sm-12">
+    				<div class="counter-icon text-center">
+    					<img src="img/comm_icon.png">
+    				</div>
+    				<p class="countUpMe" data-endVal="2500">0</p>
+    				<p class="icon-name text-center">Blog posts</p>
+    				<hr class="col-lg-2 col-md-1 col-sm-2 mt-4">
+    			</div>
+
+    			<div class="col-lg-2 col-sm-12">
+    				<div class="counter-icon text-center">
+    					<img src="img/heart_icon.png">
+    				</div>
+    				<p class="countUpMe" data-endVal="873">0</p>
+    				<p class="icon-name text-center">Likes</p>
+    				<hr class="col-lg-2 col-md-1 col-sm-2 mt-4">
+    			</div>
+
+    			<div class="col-lg-2 col-sm-12">
+    				<div class="counter-icon text-center">
+    					<img src="img/bill_icon.png">
+    				</div>
+    				<p class="countUpMe" data-endVal="900">0</p>
+    				<p class="icon-name text-center">We launched</p>
+    				<hr class="col-lg-2 col-md-1 col-sm-2 mt-4">
+    			</div>
     		</div>
     	</div>
     </section>
@@ -259,35 +305,14 @@
 
 
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="js/jquery-2.2.4.js"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
-<script>
-	$('.slider').slick({
-    slidesToShow: 1,
-    slidesToScroll: 1,
-    dots: true,
-    infinite: true,
-  speed: 500,
-  fade: true,
-  autoplay: true,
-  cssEase: 'linear',
-  nextArrow: '<i class="fa fa-angle-right right-slider-arrow" aria-hidden="true"></i>',
-  prevArrow: '<i class="fa fa-angle-left left-slider-arrow" aria-hidden="true"></i>',
 
-});
-
-	$(window).scroll(function() {    
-	    var scroll = $(window).scrollTop();
-
-	    if (scroll >= 200) {
-	        $('nav').addClass("dark-header");
-	    } else {
-	        $('nav').removeClass("dark-header");
-	    }
-	});
-</script>
+<script src="js/counter.js"></script>
+<script src="js/waypoints.min.js"></script>
+<script src="js/archwayent.js"></script>
 </html>
