--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
     	<div class="slider">
 			  <div class="slide-phase" style="background-image: url('img/cayetano-gil-502991-unsplash.jpg');">
 			  	<div class="img-bg">
-			  		<!-- <img src="img/cayetano-gil-502991-unsplash.jpg" class="img-fluid" /> -->
 			  	</div>
 			    <div class="content-holder">
 			    	<div class="content-here">
@@ -64,7 +63,6 @@
 			  </div>
 			  <div class="slide-phase" style="background-image: url('img/america-canyon-cliff-417119.jpg');">
 			  	<div class="img-bg">
-			  		<!-- <img src="img/cayetano-gil-502991-unsplash.jpg" class="img-fluid" /> -->
 			  	</div>
 			    <div class="content-holder slider-content-left">
 			    	<div class="content-here">
@@ -86,7 +84,6 @@
     					<div class="service-icon pb-3">
     						<img src="img/icon_1.png">
     					</div>
-    					<!-- <i class="fa fa-pencil pb-3" aria-hidden="true"></i> -->
 	    				<h3>Service 1</h3>
 	    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 	    				<hr class="col-lg-3 mt-4">
@@ -97,7 +94,6 @@
     					<div class="service-icon pb-3">
     						<img src="img/icon_2.png">
     					</div>
-    					<!-- <i class="fa fa-file pb-3" aria-hidden="true"></i> -->
 	    				<h3>Service 2</h3>
 	    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 	    				<hr class="col-lg-3 mt-4">
@@ -108,7 +104,6 @@
     					<div class="service-icon pb-3">
     						<img src="img/icon_3.png">
     					</div>
-    					<!-- <i class="fa fa-cog pb-3" aria-hidden="true"></i> -->
 	    				<h3>Service 3</h3>
 	    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 	    				<hr class="col-lg-3 mt-4">
@@ -119,7 +114,6 @@
     					<div class="service-icon pb-3">
     						<img src="img/icon_4.png">
     					</div>
-    					<!-- <i class="fa fa-briefcase pb-3" aria-hidden="true"></i> -->
 	    				<h3>Service 4</h3>
 	    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 	    				<hr class="col-lg-3 mt-4">
@@ -133,7 +127,6 @@
     	<div class="container-fluid">
     		<div class="row">
     			<div class="col-lg-6 col-md-6 col-sm-12 office-pic opacity-0 left-slide" style="background-image: url(img/nastuh-abootalebi-284884-unsplash.jpg);">
-    				<!-- <img src="img/nastuh-abootalebi-284884-unsplash.jpg"> -->
     			</div>
     			<div class="col-lg-6 col-md-6 col-sm-12 about-short-read opacity-0 right-slide">
     				<div class="col-lg-9 col-md-12 col-sm-12 pb-sm-4">
@@ -149,13 +142,12 @@
     <section id="project-section">
     	<div class="container">
     		<div class="row">
-    			<div class="col-lg-12 text-center">
+    			<div class="col-lg-8 offset-lg-2 col-md-12 mb-4 text-center">
     				<h2>Our Latest Projects.</h2>
     				<span><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></span>
     			</div>
     		</div>
-    		<div class="row  mt-5">
-    			<!-- <div class="col-lg-12"> -->
+    		<div class="row mt-3">
 				<div class="card-deck">
 					<div class="col-lg-4 mb-4 opacity-0 left-slide">
 						<div class="card">
@@ -272,14 +264,12 @@
 									</ul>
 								</div>
 								<div class="arrow-up">
-
 								</div>
 							</div>
-
-					    <div class="card-body">
-					      <h5 class="card-title">Project title</h5>
+							<div class="card-body">
+								<h5 class="card-title">Project title</h5>
 						      <p class="card-text">Category, Category, Category</p>
-					    </div>
+							</div>
 					  </div>
 					</div>
 
@@ -287,7 +277,7 @@
     		</div>
     		<div class="row text-center">
     			<div class="col-lg-12">
-    				<a href="#" class="btn btn-light-brown mb-4">SEE MORE</a>
+    				<a href="#" class="btn btn-light-brown mb-4 opacity-0 up-slide">SEE MORE</a>
     			</div>
     		</div>
     	</div>
@@ -309,48 +299,91 @@
     		</div>
     	</div>
     </section>
-	 <!-- The Modal -->
-		<div class="modal" id="myModal">
-		  <div class="modal-dialog">
-		    <div class="modal-content">
-
-		      <!-- Modal Header -->
-		      <div class="modal-header">
-		        <h4 class="modal-title">Modal Heading</h4>
-		        <button type="button" class="close" data-dismiss="modal">&times;</button>
-		      </div>
-
-		      <!-- Modal body -->
-		      <div class="modal-body">
-		        Modal body..
-		      </div>
-
-		      <!-- Modal footer -->
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-		      </div>
-
-		    </div>
-		  </div>
-		</div>
 
     <section id="post-section">
     	<div class="container">
     		<div class="row">
-    			<div class="col-lg-12">
+    			<div class="col-lg-8 offset-lg-2 col-md-12 mb-4 text-center">
     				<h2>Recent Posts.</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					</p>
     			</div>
     		</div>
     		<div class="row">
-    			<div class="col-lg-4 col-md-4 col-sm-12"></div>
-    			<div class="col-lg-4 col-md-4 col-sm-12"></div>
-    			<div class="col-lg-4 col-md-4 col-sm-12"></div>
-    		</div>
-    		<div class="row">
-    			<div class="col-lg-12">
-    				<button class="btn">SEE MORE</button>
-    			</div>
+				<div class="card-deck">
+					<div class="col-lg-4 mb-4 opacity-0 left-slide">
+						<div class="card">
+							<div class="img-holder" style="background-image: url(img/rawpixel-652547-unsplash.jpg);">
+								<div class="date-post">
+									<div class="date">
+										30
+									</div>
+									<div class="month">
+										Sep.
+									</div>
+								</div>
+								<div class="back-drop">
+								</div>
+							</div>
+						    <div class="card-body">
+						      <h5 class="card-title"><a href="#">Post title</a></h5>
+						      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+								<a href="#">Read More <i class="fa fa-caret-right" aria-hidden="true"></i></a>
+						    </div>
+						 </div>
+					</div>
 
+					<div class="col-lg-4 mb-4 opacity-0 up-slide">
+						<div class="card">
+							<div class="img-holder" style="background-image: url(img/rawpixel-652547-unsplash.jpg);">
+								<div class="date-post">
+									<div class="date">
+										23
+									</div>
+									<div class="month">
+										Sep.
+									</div>
+								</div>
+								<div class="back-drop">
+								</div>
+							</div>
+						    <div class="card-body">
+								 <h5 class="card-title"><a href="#">Post title</a></h5>
+  							  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+  							  <a href="#">Read More <i class="fa fa-caret-right" aria-hidden="true"></i></a>
+						    </div>
+						 </div>
+					</div>
+
+					<div class="col-lg-4 mb-4 opacity-0 right-slide">
+						<div class="card">
+							<div class="img-holder" style="background-image: url(img/rawpixel-652547-unsplash.jpg);">
+								<div class="date-post">
+									<div class="date">
+										5
+									</div>
+									<div class="month">
+										Sep.
+									</div>
+								</div>
+								<div class="back-drop">
+								</div>
+							</div>
+
+						    <div class="card-body">
+								 <h5 class="card-title"><a href="#">Post title</a></h5>
+ 						      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+ 								<a href="#">Read More <i class="fa fa-caret-right" aria-hidden="true"></i></a>
+						    </div>
+						 </div>
+					</div>
+				</div>
+    		</div>
+			<div class="row text-center">
+    			<div class="col-lg-12">
+    				<a href="#" class="btn btn-light-brown mb-4 opacity-0 up-slide">SEE MORE</a>
+    			</div>
     		</div>
     	</div>
     </section>
@@ -407,9 +440,30 @@
     </section>
 
     <footer>
-    	<section id="footer-top"></section>
-    	<section id="footer-bottom">
+    	<section id="footer-top">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-3 col-sm-12">
+						<a class="navbar-brand" href="#">ARCHWAYENT</a>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<a href="#">Read More <i class="fa fa-caret-right" aria-hidden="true"></i></a>
+					</div>
+					<div class="offset-lg-3 col-lg-6 offset-sm-0 col-sm-12">
 
+					</div>
+				</div>
+			</div>
+		</section>
+    	<section id="footer-bottom">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						Copyright &copy; 2018 <a href="#">ARCHWAYENT</a> &nbsp;|&nbsp; <a href="#">Privacy Policy</a> &nbsp;|&nbsp; <a href="#">FAQ</a> &nbsp;|&nbsp; <a href="#">Suppot</a>
+					</div>
+				</div>
+			</div>
     	</section>
     </footer>
 
