--- a/index.html
+++ b/index.html
@@ -443,15 +443,33 @@
     	<section id="footer-top">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-3 col-sm-12">
+					<div class="col-lg-3 col-sm-12 comp-about">
 						<a class="navbar-brand" href="#">ARCHWAYENT</a>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						</p>
-						<a href="#">Read More <i class="fa fa-caret-right" aria-hidden="true"></i></a>
+						<a href="#" class="read-more">Read More <i class="fa fa-caret-right" aria-hidden="true"></i></a>
 					</div>
-					<div class="offset-lg-3 col-lg-6 offset-sm-0 col-sm-12">
+					<div class="offset-lg-2 col-lg-7 offset-sm-0 col-sm-12 comp-info">
+						<p>
+							Insert company address here
+						</p>
+						<p>
+							Email : <a href="mailto:myemail@to.you">myemail@to.you</a>
+						</p>
+						<p>
+							Phone : <a href="tel:0123456789">0123456789</a>
+						</p>
+						</p>
 
+						<ul class="social-media">
+							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+							<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						</ul>
+
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153517.729206736!2d-113.79029785536292!3d39.478202698898414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874c6bc78f13f9cd%3A0xbddf4aa56cd7463f!2sUtah%2C+USA!5e0!3m2!1sen!2sph!4v1529661062032" width="100%" height="275" frameborder="0" style="border:0" allowfullscreen class="mt-3"></iframe>
 					</div>
 				</div>
 			</div>
