--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 			    	</div>
 			    </div>
 			  </div>
+
 			  <div class="slide-phase" style="background-image: url('img/america-canyon-cliff-417119.jpg');">
 			  	<div class="img-bg">
 			  	</div>
@@ -68,7 +69,7 @@
 			    	<div class="content-here">
 			    		<h1 class="opacity-0">Insert Header Title</h1>
 			    		<span class="opacity-0"><p>slide short desc Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></span>
-			    		<button class="btn btn-light-brown opacity-0">Read More</button>
+			    		<button class="btn btn-light-brown opacity-0">Contact Us</button>
 			    	</div>
 
 			    </div>
