--- a/index.html
+++ b/index.html
@@ -50,19 +50,32 @@
     </nav>
     <header>
     	<div class="slider">
-			  <div class="slide-phase" style="background-image: url('img/cayetano-gil-502991-unsplash.jpg');">
+			<div class="slide-phase" style="background-image: url('img/slider-3.jpg');">
+			 <div class="img-bg">
+			 </div>
+			  <div class="content-holder slider-content-left">
+				 <div class="content-here">
+					 <h1 class="opacity-0 animated fadeInLeft">Insert Header Title</h1>
+					 <span class="opacity-0 animated fadeInRight"><p>slide short desc Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></span>
+					 <button class="btn btn-light-brown opacity-0 animated fadeInUp">Contact Us</button>
+				 </div>
+
+			  </div>
+			</div>
+
+			  <div class="slide-phase" style="background-image: url('img/slider-1.jpg');">
 			  	<div class="img-bg">
 			  	</div>
 			    <div class="content-holder">
 			    	<div class="content-here">
-			    		<h1 class="opacity-0 animated fadeInLeft">Insert Header Title</h1>
-			    		<span class="opacity-0 animated fadeInRight"><p>slide short desc Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></span>
+			    		<h1 class="opacity-0">Insert Header Title</h1>
+			    		<span class="opacity-0"><p>slide short desc Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></span>
 			    		<button class="btn btn-light-brown opacity-0 animated fadeInUp">Read More</button>
 			    	</div>
 			    </div>
 			  </div>
 
-			  <div class="slide-phase" style="background-image: url('img/america-canyon-cliff-417119.jpg');">
+			  <div class="slide-phase" style="background-image: url('img/slider-2.jpg');">
 			  	<div class="img-bg">
 			  	</div>
 			    <div class="content-holder slider-content-left">
@@ -133,7 +146,7 @@
     				<div class="col-lg-9 col-md-12 col-sm-12 pb-sm-4">
     					<h2 class="mt-5">About Us</h2>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    					<a href="#" class="btn btn-light-brown mb-4">READ MORE</a>
+    					<a href="#" class="btn btn-light-orange mb-4">READ MORE</a>
     				</div>
     			</div>
     		</div>
@@ -215,7 +228,7 @@
 
 					<div class="col-lg-4 mb-4 opacity-0 left-slide">
 						<div class="card">
-							<div class="img-holder" style="background-image: url(img/rawpixel-668346-unsplash.jpg);">
+							<div class="img-holder" style="background-image: url(img/slider-1.jpg);">
 								<div class="view-opt">
 									<ul>
 										<li><a href="#"><i class="fa fa-link" aria-hidden="true"></i></a></li>
@@ -485,6 +498,30 @@
 			</div>
     	</section>
     </footer>
+	 <!-- The Modal -->
+  <div class="modal fade" id="myModal">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Company video</h4>
+          <button type="button" class="close" data-dismiss="modal">×</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+          <iframe width="100%" height="600" src="https://www.youtube.com/embed/E5ln4uR4TwQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 
 </body>
