--- a/index.html
+++ b/index.html
@@ -499,29 +499,26 @@
     	</section>
     </footer>
 	 <!-- The Modal -->
-  <div class="modal fade" id="myModal">
+  <!-- <div class="modal fade" id="myModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
 
-        <!-- Modal Header -->
         <div class="modal-header">
           <h4 class="modal-title">Company video</h4>
           <button type="button" class="close" data-dismiss="modal">×</button>
         </div>
 
-        <!-- Modal body -->
         <div class="modal-body">
           <iframe width="100%" height="600" src="https://www.youtube.com/embed/E5ln4uR4TwQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
-        <!-- Modal footer -->
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
 
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 </body>
