--- a/index.html
+++ b/index.html
@@ -499,26 +499,30 @@
     	</section>
     </footer>
 	 <!-- The Modal -->
-  <!-- <div class="modal fade" id="myModal">
+  <div class="modal fade" id="myModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
 
-        <div class="modal-header">
+        <!-- <div class="modal-header">
           <h4 class="modal-title">Company video</h4>
           <button type="button" class="close" data-dismiss="modal">×</button>
-        </div>
+        </div> -->
 
         <div class="modal-body">
-          <iframe width="100%" height="600" src="https://www.youtube.com/embed/E5ln4uR4TwQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			  <button type="button" class="close close-this-modal" id="pause-vid" >123</button>
+			  <button type="button" class="close close-this-modal" data-dismiss="modal" >×</button>
+			  <div class="videoWrapper">
+				    <iframe id="comp-vid" width="560" height="349" src="http://www.youtube.com/embed/n_dZNLr2cME?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
+				</div>
         </div>
 
-        <div class="modal-footer">
+        <!-- <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
+        </div> -->
 
       </div>
     </div>
-  </div> -->
+  </div>
 
 
 </body>
