--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 			  <button type="button" class="close close-this-modal" id="pause-vid" >123</button>
 			  <button type="button" class="close close-this-modal" data-dismiss="modal" >×</button>
 			  <div class="videoWrapper">
-				    <iframe id="comp-vid" width="560" height="349" src="http://www.youtube.com/embed/n_dZNLr2cME?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
+				    <iframe id="comp-vid" width="560" height="349" src="https://www.youtube.com/embed/n_dZNLr2cME?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
 				</div>
         </div>
 
