--- a/index.html
+++ b/index.html
@@ -509,8 +509,7 @@
         </div> -->
 
         <div class="modal-body">
-			  <button type="button" class="close close-this-modal" id="pause-vid" >123</button>
-			  <button type="button" class="close close-this-modal" data-dismiss="modal" >×</button>
+			  <button type="button" id="pause-vid" class="close close-this-modal" data-dismiss="modal" >×</button>
 			  <div class="videoWrapper">
 				    <iframe id="comp-vid" width="560" height="349" src="https://www.youtube.com/watch?v=-3hFeBsxBsE" frameborder="0" allowfullscreen></iframe>
 				</div>
