--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         <div class="modal-body">
 			  <button type="button" id="pause-vid" class="close close-this-modal" data-dismiss="modal" >×</button>
 			  <div class="videoWrapper">
-				    <iframe id="comp-vid" width="560" height="349" src="https://www.youtube.com/watch?v=-3hFeBsxBsE" frameborder="0" allowfullscreen></iframe>
+				    <iframe id="comp-vid" width="560" height="349" src="https://www.youtube.com/embed/-3hFeBsxBsE" frameborder="0" allowfullscreen></iframe>
 				</div>
         </div>
 
