--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">ARCHWAYENT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
