--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@
         </div> -->
 
         <div class="modal-body">
-			  <button type="button" id="pause-vid" class="close close-this-modal" data-dismiss="modal" >×</button>
+			  <button type="button" id="pausse-vid" class="close close-this-modal" data-dismiss="modal" >×</button>
 			  <div class="videoWrapper">
-				    <iframe id="comp-vid" class="ytplayer" width="560" height="349" src="https://www.youtube.com/embed/-3hFeBsxBsE" frameborder="0" allowfullscreen></iframe>
+				    <iframe id="comp-vid" class="ytplayer" width="560" height="349" src="https://www.youtube.com/embed/qPT-K6FUf0A" frameborder="0" allowfullscreen></iframe>
 				</div>
         </div>
 
